# mageNT

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  config.example.yaml  config.yaml  install.bat  install.sh  pyproject.toml  requirements.txt  run_server.py  server.py  test_server.py
agents/: __init__.py  base.py  code_discipline.py  schemas.py  spec_schemas.py
agents/business/: __init__.py  (+6 more)
config/: dispatch.yaml  providers.yaml  seniority_profiles.yaml
docs/: AGENT_TEAMS.md  raw-vs-magent-coding.md  raw-vs-magent-nim.md
hooks/: __init__.py  base.py
magent_cli/: __init__.py  __main__.py
providers/: __init__.py  base.py  claude_pro.py  exceptions.py  models.py
rules/: __init__.py  base.py  coding_style.py  git_workflow.py  performance.py  security.py  testing.py
skills/: __init__.py  base.py
tests/: test_best_of_n.py  test_coding_eval.py  test_constraints.py  test_dispatch_tools.py  test_hooks.py  test_implement_feedback.py  test_llm_adapter_temperature.py  test_prompt_builder.py  test_quality_coordination.py  test_rules.py  test_spec_pipeline.py  test_spec_schemas.py  test_team_context.py
tools/: dispatch_manifest.py  enable_teams.py  generate_dispatch.py  raw_baseline.py  resolve_seniority.py  validate_spec.py
utils/: __init__.py  config_loader.py  constraints.py  implement_runner.py  llm_adapter.py  mememo_client.py  parallel_orchestrator.py  prompt_builder.py  skill_registry.py  spec_builder.py  spec_pipeline.py  spec_store.py  speckit_builder.py  test_framework_detector.py  version_provider.py
workflows/: __init__.py  templates.py
(+96 files in other folders)
